--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,6 +20,8 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
   ]
 }
