--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://bnguyen.github.io/bryan-web-resume",
-  "name": "bryan-web-resume",
+  "homepage": "http://bnguyen.github.io/bnguyen",
+  "name": "bnguyen",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
